mcfootball-generator/src/test/resources/football/invalid/DuplicateMatch.fb
/* Invalid — triggers 0xFC017: two identical matches (same date, time, home, away). */
footballsite DuplicateMatchTest {

  navigation { Testland; }

  country Testland {
    league TestLeague season "2025-2026" {
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Team Alpha"   ("CityA")
        away    "Team Beta"    ("CityB")
        score   2 - 1
        stadium "Arena One"
      }
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Team Alpha"   ("CityA")
        away    "Team Beta"    ("CityB")
        score   0 - 0
        stadium "Arena Two"
      }
    }
  }

}
